feat: jellyfin activity track & dashboard new data (#1)
* feat: polling service for jellyfin activity

* feat: heatmap activity & watched unrated apis

* feat: update dashboard to display watche but not rated & activity heatmap

* feat: backfill whole activity

* refactor: each episode entry is counted separate in activity heatmap

* feat: jellyfin statistics in dashboard as separate views

* ci: run server test in pre-commit
