# server/api-docs.json
@@ -6,7 +6,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080",
+      "url": "http://127.0.0.1:8080",
       "description": "Generated server url"
     }
   ],
@@ -879,6 +879,44 @@
         }
       }
     },
+    "/api/v1/library/series/watched/unrated": {
+      "get": {
+        "tags": [
+          "library-series-controller"
+        ],
+        "operationId": "getRecentlyWatchedUnratedSeries",
+        "parameters": [
+          {
+            "name": "pageable",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Pageable"
+            }
+          },
+          {
+            "name": "filters",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/SeriesFiltersDTO"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/SeriesResponseWrapper"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/library/series/broken": {
       "get": {
         "tags": [
@@ -992,6 +1030,44 @@
           "library-movies-controller"
         ],
         "operationId": "getMovies",
+        "parameters": [
+          {
+            "name": "pageable",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Pageable"
+            }
+          },
+          {
+            "name": "filters",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/MoviesFiltersDTO"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/MoviesResponseWrapper"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/library/movies/watched/unrated": {
+      "get": {
+        "tags": [
+          "library-movies-controller"
+        ],
+        "operationId": "getRecentlyWatchedUnratedMovies",
         "parameters": [
           {
             "name": "pageable",
@@ -2123,6 +2199,12 @@
               "$ref": "#/components/schemas/MediaTypeBreakdownDTO"
             }
           },
+          "jellyfinMediaTypeBreakdown": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/MediaTypeBreakdownDTO"
+            }
+          },
           "topGenresByCount": {
             "type": "array",
             "items": {
@@ -2130,6 +2212,12 @@
             }
           },
           "topGenresByScore": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GenreStatDTO"
+            }
+          },
+          "jellyfinTopGenresByCount": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/GenreStatDTO"
@@ -2177,7 +2265,19 @@
               "$ref": "#/components/schemas/DecadeStatDTO"
             }
           },
+          "jellyfinDecadePreferences": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/DecadeStatDTO"
+            }
+          },
           "recentTrends": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RecentTrendsDTO"
+            }
+          },
+          "jellyfinRecentTrends": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/RecentTrendsDTO"
@@ -2192,10 +2292,19 @@
           "runtimeStats": {
             "$ref": "#/components/schemas/RuntimeStatsDTO"
           },
+          "jellyfinRuntimeStats": {
+            "$ref": "#/components/schemas/RuntimeStatsDTO"
+          },
           "ratingConsistency": {
             "$ref": "#/components/schemas/RatingConsistencyDTO"
           },
           "dayOfWeekActivity": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/DayOfWeekActivityDTO"
+            }
+          },
+          "jellyfinDayOfWeekActivity": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/DayOfWeekActivityDTO"
@@ -2207,7 +2316,19 @@
               "$ref": "#/components/schemas/RatingHeatmapYearDTO"
             }
           },
+          "uniqueMediaPlayedHeatmap": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RatingHeatmapYearDTO"
+            }
+          },
           "genreOverTime": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GenreOverTimeYearDTO"
+            }
+          },
+          "jellyfinGenreOverTime": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/GenreOverTimeYearDTO"
