# server/src/main/java/com/rattatarr/rattatarr/models/dtos/responses/ProfileStatisticsResponseDTO.java
@@ -11,8 +11,11 @@ public record ProfileStatisticsResponseDTO(
         List<RatingDistributionDTO> ratingDistribution,
         List<RatingDistributionDTO> ratingDistributionByInteger,
         List<MediaTypeBreakdownDTO> mediaTypeBreakdown,
+        List<MediaTypeBreakdownDTO> jellyfinMediaTypeBreakdown,
         List<GenreStatDTO> topGenresByCount,
         List<GenreStatDTO> topGenresByScore,
+        List<GenreStatDTO> jellyfinTopGenresByCount,
+        List<GenreStatDTO> jellyfinTopGenresByScore,
         List<PersonStatDTO> directorsByCount,
         List<PersonStatDTO> directorsByScore,
         List<PersonStatDTO> producersByCount,
@@ -20,12 +23,18 @@ public record ProfileStatisticsResponseDTO(
         List<PersonStatDTO> actorsByCount,
         List<PersonStatDTO> actorsByScore,
         List<DecadeStatDTO> decadePreferences,
+        List<DecadeStatDTO> jellyfinDecadePreferences,
         List<RecentTrendsDTO> recentTrends,
+        List<RecentTrendsDTO> jellyfinRecentTrends,
         List<RatingActivityDTO> monthlyActivity,
         RuntimeStatsDTO runtimeStats,
+        RuntimeStatsDTO jellyfinRuntimeStats,
         RatingConsistencyDTO ratingConsistency,
         List<DayOfWeekActivityDTO> dayOfWeekActivity,
+        List<DayOfWeekActivityDTO> jellyfinDayOfWeekActivity,
         List<RatingHeatmapYearDTO> ratingHeatmap,
-        List<GenreOverTimeYearDTO> genreOverTime
+        List<RatingHeatmapYearDTO> uniqueMediaPlayedHeatmap,
+        List<GenreOverTimeYearDTO> genreOverTime,
+        List<GenreOverTimeYearDTO> jellyfinGenreOverTime
 ) implements Serializable {
 }
